--- a/src/app/features/gis/components/quotation/components/cover-types-details/cover-types-details.component.html
+++ b/src/app/features/gis/components/quotation/components/cover-types-details/cover-types-details.component.html
@@ -3,7 +3,8 @@
      <app-stepper [currentStep]="2" [stepperData]="steps"></app-stepper>
      <div  class="container mx-2 mt-n1">  
 
-        <div *ngFor="let coverType of passedCovertypes"  class="card mb-3" style=" position: relative;">
+        <div *ngFor="let risk of riskLevelPremiums; let i = index; "  class="card mb-3" style=" position: relative;">
+            
             <ngx-spinner
         name="coverComparisonScreen"
           type="ball-clip-rotate-multiple"
@@ -16,7 +17,7 @@
                 <div class="card-body">
                   
                     <!-- <p class="title ms-4" >{{ coverTypeShortDescription }}</p> -->
-                    <p class="title ms-4">{{ coverType.description }}</p>
+                    <p class="title ms-4">{{ passedCovertypes[i].description }}</p>
                     
                     <div class="row ms-3">
                         <div class="col-lg-4 col-12">
@@ -34,7 +35,7 @@
                             <p class="details-label">Premium</p>
                             </div>
                             <div class="col-6">
-                            <p class="details-label">{{premiumResponse.riskLevelPremiums[0]?.premium }}</p>
+                            <p class="details-label">{{risk.premium | number }}</p>
                             </div>
                         </div>
                         </div>
@@ -53,13 +54,14 @@
                         </div>
                         <div class="col-lg-4 col-12">
                         <p class="title2">Total payable premium</p>
-                        <p class="payable-premium ms-4">{{premiumResponse.riskLevelPremiums[0]?.premium}}</p>
+                        <p class="payable-premium ms-4">{{risk.premium | number }}</p>
 
                         </div>
                     </div>
+                   
                   
                     <div class="float-start mb-4 ms-4" *ngIf="!isCollapsibleOpen">
-                        <button type="button" class="btn btn-outline-primary me-2" data-bs-toggle="modal" data-bs-target="#addMoreBenefits" id="btnCoverTypes" (click)="passCovertypeDesc(coverType.description ,coverType.coverTypeCode);createQuotation();" >Add more benefits</button>
+                        <button type="button" class="btn btn-outline-primary me-2" data-bs-toggle="modal" data-bs-target="#addMoreBenefits" id="btnCoverTypes" (click)="passCovertypeDesc(passedCovertypes[i].coverTypeShortDescription ,passedCovertypes[i].coverTypeCode);createQuotation();" >Add more benefits</button>
                         <a class="btn btn-link ms-2" (click)="toggleCollapsible()">
                             View cover details
                         </a>                
@@ -76,7 +78,7 @@
                               <p class="modal-title mb-3" id="addMoreBenefitsLabel">Additional benefit details</p>
                              
                     
-                              <p-table [value]="quickQuoteSectionList" id="clientTable" dataKey="code" [tableStyle]="{ 'max-width': '50rem', 'border-spacing': '10 10px' }"
+                              <p-table [value]="covertypeSpecificSection" id="clientTable" dataKey="code" [tableStyle]="{ 'max-width': '50rem', 'border-spacing': '10 10px' }"
                                 [(selection)]="selectedSections"   [resizableColumns]="true" styleClass="p-datatable-sm"
                                 responsiveLayout="scroll" class='ui-datatable' [autoLayout]="true" [paginator]="true" [rows]="10"
                                 [scrollable]="true" scrollDirection="horizontal" [showCurrentPageReport]="true"
@@ -191,6 +193,30 @@
                       </div>
                <!-- Collapsible Section -->
                <div *ngIf="isCollapsibleOpen" class="mt-3 MB-2">
+                <div class="row ms-3">
+                    <div class="col-lg-4 col-12">
+                        <p class="title2">Additional Benefits</p>
+                        <div class="row">
+                            <div class="col-6">
+                            <p class="details-label"></p>
+                            </div>
+                            <div class="col-6">
+                            <p class="details-label">{{  sumInsuredValue | number }}</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6">
+                            <p class="details-label">Premium</p>
+                            </div>
+                            <div class="col-6">
+                            <p class="details-label"></p>
+                            </div>
+                        </div>
+                        </div>
+                </div>
+                <div >
+
+                </div>
                 <p class="title2"> Excess applicable under the cover</p>
                 <div class="row">
                     <div class="col-8">
