--- a/src/app/features/reports-v2/create-report/create-report.component.css
+++ b/src/app/features/reports-v2/create-report/create-report.component.css
@@ -86,3 +86,65 @@
   border-bottom: #00529b 1px solid;
   color: #00529b;
 }
+
+.ai-bot {
+  font-weight: 500;
+  font-size: 0.9rem;
+  cursor: pointer;
+}
+
+.ai-bot:hover {
+  font-size: 1rem;
+  transition: font-size 500ms;
+}
+
+.ai-bot .robot {
+  padding: 8px;
+  font-size: 1rem;
+  border-radius: 100%;
+  background: #d9d9d9;
+}
+
+.ai-bot span {
+  font-size: 0.6rem;
+}
+
+.modal-content {
+  position: fixed;
+  width: 400px;
+  top: 150px;
+  right: 200px;
+}
+
+.ai-bot-dialogue {
+  width: 300px;
+  height: 400px;
+  border: solid 1px #d9d9d9;
+  border-radius: 10px;
+  margin: 10px;
+  /* padding: 10px; */
+  position: absolute;
+  right: 10px;
+  z-index: 1000;
+}
+
+.ai-bot-dialogue .bot-header {
+  background: #00529b;
+  padding: 10px;
+  color: #fff;
+}
+
+.ai-bot-dialogue .bot-footer {
+  position: absolute;
+  bottom: 0;
+  padding: 10px;
+  margin-top: 10px;
+}
+
+.ai-bot-dialogue .chat-message {
+  background: #f5f6f8;
+  padding: 5px;
+  border-radius: 10px;
+  width: 90%;
+  display: inline-block;
+}
