--- a/src/app/features/crm/components/payment-modes/payment-modes.component.html
+++ b/src/app/features/crm/components/payment-modes/payment-modes.component.html
@@ -72,6 +72,76 @@
       </div>
     </div>
 
+    <div class="card mb-3">
+      <div class="card-header bg-transparent float-start">
+        <span class="float-start mt-3">Claims payment modes</span>
+        <div class="row mt-3 mb-3 float-end">
+          <div>
+              <span class="icon-circle"
+              ><i class="fa-solid fa-plus" (click)="openClaimPaymentModesModal()"></i
+              ></span>
+            <span class="icon-circle"
+            ><i class="pi pi-pencil" (click)="editClaimPaymentMode()"></i
+            ></span>
+            <span class="icon-circle"
+            ><i
+              class="fa-regular fa-trash-can"
+              (click)="deleteClaimPaymentMode()"
+            ></i
+            ></span>
+          </div>
+        </div>
+      </div>
+      <div class="card-body">
+        <div class="row mb-5">
+          <div class="col-12">
+            <p-table
+              #claimPaymentModesTable
+              [value]="claimPaymentModesData"
+              [autoLayout]="true"
+              [rowHover]="true"
+              [resizableColumns]="true"
+              styleClass="p-datatable-sm"
+              responsiveLayout="scroll"
+              [scrollable]="true"
+              scrollHeight="400px"
+              class="ui-datatable"
+              [globalFilterFields]="['name']"
+            >
+              <ng-template pTemplate="header">
+                <tr>
+                  <th class="head">Short description</th>
+                  <th class="head">Description</th>
+                  <th class="head">Max amount</th>
+                  <th class="head">Min amount</th>
+                  <th class="head">Default value</th>
+                  <th class="head">Remarks</th>
+                </tr>
+              </ng-template>
+              <ng-template pTemplate="body" let-claimPaymentmode>
+                <tr
+                  class="custom-table"
+                  (click)="onClaimPaymentModeRowSelect(claimPaymentmode)"
+                  [class.selected]="selectedClaimsPaymentMode === claimPaymentmode"
+                >
+                  <td class="body">{{ claimPaymentmode.shortDescription }}</td>
+                  <td class="body">{{ claimPaymentmode.description }}</td>
+                  <td class="body">{{ claimPaymentmode.maximumAmount }}</td>
+                  <td class="body">{{ claimPaymentmode.minimumAmount }}</td>
+                  <td class="body">{{ claimPaymentmode.isDefault }}</td>
+                  <td class="body">{{ claimPaymentmode.remarks }}</td>
+                </tr>
+              </ng-template>
+              <ng-template pTemplate="emptymessage">
+                <tr>
+                  <td colspan="6">No claims payment mode detail(s) found.</td>
+                </tr>
+              </ng-template>
+            </p-table>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
@@ -167,7 +237,128 @@
         </form>
       </div>
       <div class="modal-footer border-top-0">
-        <button type="button" class="btn btn-primary" (click)="savePaymentMode()">
+        <button type="button" class="btn btn-primary" id="savePaymentModeBtn" (click)="savePaymentMode()">
+          Save Details
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div
+  class="modal fade"
+  #claimsPaymentModesModal
+  id="claimsPaymentModesModal"
+  tabindex="-1"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog align-items-center">
+    <div class="modal-content">
+      <div class="modal-header border-bottom-0">
+        <h5 class="modal-title" id="exampleModalLabel">Add a new claims payment mode</h5>
+        <button
+          type="button"
+          class="btn-close"
+          (click)="closeClaimPaymentModesModal()"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="createClaimsPaymentModeForm">
+          <div class="row">
+            <ng-container *ngIf="visibleStatus.id === 'Y'">
+              <div class="col-6 mb-3">
+                <label for="id" class="form-label">ID</label>
+                <p-dropdown
+                  [options]="paymentModesData"
+                  optionLabel="shortDescription"
+                  formControlName="id"
+                  id="id"
+                  [filter]="true"
+                  filterBy="shortDescription"
+                  [showClear]="true"
+                  [style]="{ width: '100%', height: '48%' }"
+                  placeholder="Select ID"
+                  [ngClass]="{ 'is-invalid': f['id']?.invalid && (f['id']?.dirty || f['id']?.touched) }"
+                >
+                </p-dropdown>
+                <div *ngIf="f['id']?.invalid && (f['id']?.dirty || f['id']?.touched)" class="form-text text-danger">
+                  <div *ngIf="f['id']?.errors['required']">ID is required</div>
+                </div>
+              </div>
+            </ng-container>
+            <ng-container *ngIf="visibleStatus.claimsDescription === 'Y'">
+              <div class="col-6 mb-3">
+                <label for="claimsDescription" class="form-label">Description</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="claimsDescription"
+                  placeholder="Description"
+                  formControlName="claimsDescription"
+                  [ngClass]="{ 'is-invalid': f['claimsDescription']?.invalid && (f['claimsDescription']?.dirty || f['claimsDescription']?.touched) }"
+                />
+                <div *ngIf="f['claimsDescription']?.invalid && (f['claimsDescription']?.dirty || f['claimsDescription']?.touched)" class="form-text text-danger">
+                  <div *ngIf="f['claimsDescription']?.errors['required']">Description is required</div>
+                </div>
+              </div>
+            </ng-container>
+            <ng-container *ngIf="visibleStatus.minAmount === 'Y'">
+              <div class="col-6 mb-3">
+                <label for="minAmount" class="form-label">Minimum amount</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="minAmount"
+                  placeholder="Minimum amount"
+                  formControlName="minAmount"
+                  [ngClass]="{ 'is-invalid': f['minAmount']?.invalid && (f['minAmount']?.dirty || f['minAmount']?.touched) }"
+                />
+                <div *ngIf="f['minAmount']?.invalid && (f['minAmount']?.dirty || f['minAmount']?.touched)" class="form-text text-danger">
+                  <div *ngIf="f['minAmount']?.errors['required']">Minimum amount is required</div>
+                </div>
+              </div>
+            </ng-container>
+            <ng-container *ngIf="visibleStatus.maxAmount === 'Y'">
+              <div class="col-6 mb-3">
+                <label for="maxAmount" class="form-label">Maximum amount</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="maxAmount"
+                  placeholder="Maximum amount"
+                  formControlName="maxAmount"
+                  [ngClass]="{ 'is-invalid': f['maxAmount']?.invalid && (f['maxAmount']?.dirty || f['maxAmount']?.touched) }"
+                />
+                <div *ngIf="f['maxAmount']?.invalid && (f['maxAmount']?.dirty || f['maxAmount']?.touched)" class="form-text text-danger">
+                  <div *ngIf="f['maxAmount']?.errors['required']">Maximum amount is required</div>
+                </div>
+              </div>
+            </ng-container>
+            <ng-container *ngIf="visibleStatus.claimsDefaultMode === 'Y'">
+              <div class="col-6 mb-3">
+                <label for="claimsDefaultMode" class="form-label w-100">Default mode</label>
+
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" formControlName="claimsDefaultMode" id="claimsDefaultMode" value="Y">
+                  <label class="form-label" for="claimsDefaultMode">Yes</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" formControlName="claimsDefaultMode" id="claimsDefaultMode" value="N">
+                  <label class="form-label" for="claimsDefaultMode">No</label>
+                </div>
+                <div *ngIf="f['claimsDefaultMode']?.invalid && (f['claimsDefaultMode']?.dirty || f['claimsDefaultMode']?.touched)" class="form-text text-danger">
+                  <div *ngIf="f['claimsDefaultMode']?.errors['required']">Default mode is required</div>
+                </div>
+              </div>
+            </ng-container>
+
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer border-top-0">
+        <button type="button" class="btn btn-primary" id="saveClaimsPaymentModeBtn" (click)="saveClaimPaymentMode()">
           Save Details
         </button>
       </div>
@@ -181,5 +372,13 @@
   [message]="'Are you sure you want to delete this payment mode?'"
   (confirmed)="confirmPaymentModeDelete()"
   #paymentModeConfirmationModal
+></app-reusable-input>
+
+<app-reusable-input
+  [modalId]="'claimsPaymentModeConfirmationModal'"
+  [title]="'Delete Confirmation'"
+  [message]="'Are you sure you want to delete this claims payment mode?'"
+  (confirmed)="confirmClaimsPaymentModeDelete()"
+  #claimsPaymentModeConfirmationModal
 ></app-reusable-input>
 <div class="mobile-bottom"></div>
