--- a/src/app/features/reports-v2/create-report/create-report.component.html
+++ b/src/app/features/reports-v2/create-report/create-report.component.html
@@ -160,27 +160,43 @@
               </span>
             </div>
             <div class="bot-content p-2">
-              <p-scrollPanel [style]="{ width: '100%', height: '280px' }">
+              <p-scrollPanel [style]="{ width: '100%', height: '280px' }">                
                 <div *ngFor="let conversation of conversations">
-                  <div  class="chat-message mb-1" [ngClass]="{'float-end': conversation.user == 'Bot'}">
-                    <span class="fw-bold">{{conversation.user}}</span> {{ conversation.message }}
+                  <div  
+                    class="chat-message mb-1" 
+                    [ngStyle]="conversation.user=='me'? {'float': 'right'} : {'clear': 'both'}"
+                  >
+                      <span *ngIf="conversation.user==='bot'" class="robot text-primary">
+                        <i class="fa-solid fa-robot"></i>
+                      </span> 
+                      <span 
+                        [ngClass]=
+                          "{
+                            'message': conversation.user === 'me', 
+                            'bot-message': conversation.user === 'bot', 
+                            'animate-flicker': conversation.message === 'loading...'
+                          }"
+                      >
+                        {{ conversation.message }}
+                      </span>
                   </div>
                 </div>
               </p-scrollPanel>
             </div>
             <div class="bot-footer">
-              <form [formGroup]="chatForm" >
-                <div class="row ps-2 pe-2">
-                  <div class="col-11 p-0">
-                    <div class="">
-                      <input type="text" class="form-control" formControlName="queryTerm">
-                    </div>                
-                  </div>
-                  <div class="col-1 p-1">
-                    <button class="btn btn-primary" (click)="getQueryResult()">
-                      <i class="pi pi-send"></i>
-                    </button>
-                  </div>
+              <form [formGroup]="chatForm">
+
+                <div class="input-group mb-3">
+                  <input type="text" 
+                    class="form-control" 
+                    placeholder="Enter query" 
+                    formControlName="queryTerm"
+                    id="queryTerm"
+                    #queryTerm
+                  >
+                  <button class="btn btn-primary" (click)="getQueryResult()">
+                    <i class="pi pi-send"></i>
+                  </button>
                 </div>
               </form>
             </div>
