VQ-1184: UI improvement on AI Chatbot
VQ-1184: UI/UX improvement on chatbot

VQ-1184: UI/UX improvement on Analytics screens

--- a/src/app/features/reports-v2/create-dashboard/create-dashboard.component.html
+++ b/src/app/features/reports-v2/create-dashboard/create-dashboard.component.html
@@ -169,11 +169,11 @@
     <div class="modal-dialog modal-sm">
       <div class="modal-content">
         <div class="modal-header border-0">
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="closeDeleteModal()"></button>
+          <span type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="closeDeleteModal()"></span>
         </div>
         <div class="modal-body">
           <div class="text-center">
-            <p>Are you sure you want to delete?</p>
+            <p>Do you want to remove the report from the dashboard?</p>
             <button type="button" class="btn btn-primary mx-2" data-bs-dismiss="modal"
                     style="border-radius: 4px; margin: auto" (click)="closeDeleteModal()">No</button>
             <button type="button" class="btn btn-danger" id="deleteDashboard" data-bs-dismiss="modal"
