--- a/src/app/features/reports-v2/report-preview/color-scheme/color-scheme.component.html
+++ b/src/app/features/reports-v2/report-preview/color-scheme/color-scheme.component.html
@@ -20,7 +20,7 @@
         <i *ngIf="scheme.selected" class="pi pi-check" style="font-weight: bold; font-size: 0.9rem"></i>
       </td> -->
       <td (click)="deleteColorScheme(scheme?.id)">
-        <i class="pi pi-times" style="font-weight: bold; font-size: 0.9rem; color: red"></i>
+        <i class="pi pi-trash" style="font-weight: bold; font-size: 0.9rem; color: red"></i>
       </td>
     </tr>
     </tbody>
