--- a/src/app/features/reports-v2/create-report/create-report.component.html
+++ b/src/app/features/reports-v2/create-report/create-report.component.html
@@ -9,16 +9,16 @@
     <div class="card-body">
       <div class="row">
         <div class="col-sm-3 border-0 border-end p-4">
-          <div class="me-4">
+          <div class="me-4 mb-4">
             <app-dynamic-breadcrumb [breadCrumbItems]="createReportBreadCrumbItems">
             </app-dynamic-breadcrumb>
           </div>
-          <h6 class="text-black" style="font-size: 16px; font-weight: 400;">
+          <h6 class="text-black">
             {{ 'report.report_name' | translate }}<span class="text-danger">*</span>
           </h6>
           <input type="text" class="form-control form-control-sm" placeholder="Pilot report"
                  [(ngModel)]="reportName" (input)="onReportNameChange($event)">
-          <h6 class="text-black mt-3" style="font-size: 16px; font-weight: 400;">
+          <h6 class="text-black mt-3">
             {{ 'report.subject_area' | translate }}<span class="text-danger">*</span>
           </h6>
 
@@ -154,15 +154,51 @@
           >
             <div class="bot-header">
               <i class="fa-solid fa-robot"></i>
-              TurnkeyBot <span>AI</span>
-              <span class="float-end" (click)="closeChatBox()" style="cursor: pointer;">
-                <i class="fa-solid fa-times"></i>
+              Turnquest AI <span style="font-size: 0.6rem;">Copilot</span>
+              <span class="float-end chat-icons">
+                <i class="fa fa-trash me-3" (click)="clearChat()"></i>
+                <i class="fa-solid fa-times" (click)="closeChatBox()" ></i>
               </span>
             </div>
             <div class="bot-content p-2">
               <p-scrollPanel [style]="{ width: '100%', height: '280px' }">                
                 <div *ngFor="let conversation of conversations">
-                  <div  
+
+                  <div *ngIf="conversation.user==='bot'">
+                    <div class="chat-message">
+                      <div class="row">
+                        <div class="col-1" style="margin-right: 20px;">
+                          <span class="robot text-primary">
+                            <i class="fa-solid fa-robot"></i>
+                          </span>
+                        </div>
+                        <div class="col-8 bot-message" [ngClass]="{'animate-flicker': conversation.message === 'loading...'}">
+                          <span>
+                            {{ conversation.message }}
+                          </span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div *ngIf="conversation.user==='me'">
+                    <div class="chat-message">
+                      <div class="row">
+                        <div class="col-8 offset-4">
+                          <span class="float-end message">
+                            {{ conversation.message }}
+                          </span>
+                        </div>
+                        <!-- <div class="col-2">
+                          <span class="message">
+                            You
+                          </span>
+                        </div> -->
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- <div  
                     class="chat-message mb-1" 
                     [ngStyle]="conversation.user=='me'? {'float': 'right'} : {'clear': 'both'}"
                   >
@@ -179,7 +215,7 @@
                       >
                         {{ conversation.message }}
                       </span>
-                  </div>
+                  </div> -->
                 </div>
               </p-scrollPanel>
             </div>
