--- a/src/app/features/reports-v2/report-preview/report-preview.component.css
+++ b/src/app/features/reports-v2/report-preview/report-preview.component.css
@@ -65,3 +65,12 @@
   border-bottom: #00529b 1px solid;
   color: #00529b;
 }
+
+.form-check-input:checked, .form-check-input:active {
+  background-color: #00529b;
+  border: 2px solid #00529b;
+}
+
+.form-check > input {
+  border: 2px solid #00529b;
+}
