--- a/src/app/features/reports-v2/reports/reports.component.html
+++ b/src/app/features/reports-v2/reports/reports.component.html
@@ -4,7 +4,7 @@
             <div class="card fixed-height-card">
                 <div class="card-header bg-transparent">
                     <span class="float-start mt-3 head-top">{{ 'report.reports' | translate }}
-                        <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                        <!-- <i class="fa fa-chevron-right" aria-hidden="true"></i> -->
                     </span>
                 </div>
                 <div class="card-body">
@@ -18,8 +18,8 @@
                             </p>
                             <div class="mt-auto card-btn">
                                 <button type="button" id="create-report-btn"
-                                    class="btn btn-outline-primary mt-auto align-self-end" (click)="createReports()">
-                                    {{ 'report.explore_reports' | translate }}
+                                    class="btn btn-primary mt-auto align-self-end" (click)="createReports()">
+                                    {{ 'report.explore_reports' | translate | sentenceCase}}
                                 </button>
                             </div>
                         </div>
@@ -32,7 +32,7 @@
             <div class="card fixed-height-card">
                 <div class="card-header bg-transparent">
                     <span class="float-start mt-3 head-top">{{ 'report.dashboards' | translate }}
-                        <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                        <!-- <i class="fa fa-chevron-right" aria-hidden="true"></i> -->
                     </span>
                 </div>
                 <div class="card-body">
@@ -45,8 +45,8 @@
                                 {{ 'report.dashboard_desc' | translate }}
                             </p>
                             <div class="mt-auto card-btn">
-                                <button type="button" class="btn btn-outline-primary" (click)="createDashboards()">
-                                    {{ 'report.explore_dashboard' | translate }}
+                                <button type="button" class="btn btn-primary" (click)="createDashboards()">
+                                    {{ 'report.explore_dashboard' | translate | sentenceCase }}
                                 </button>
                             </div>
                         </div>
@@ -63,11 +63,11 @@
                 <div class="card-body">
                     <button type="button" class="btn-tab" [ngClass]="{'active': activeTab === 'myReports'}"
                         (click)="myReports()">
-                        {{ 'report.my_reports' | translate }}
+                        {{ 'report.my_reports' | translate | sentenceCase }}
                     </button>
                     <button type="button" class="btn-tab" [ngClass]="{'active': activeTab === 'sharedReports'}"
                         (click)="sharedReports()">
-                        {{ 'report.shared_reports' | translate }}
+                        {{ 'report.shared_reports' | translate | sentenceCase }}
                     </button>
     
                     <div class="tab-content mt-3 mb-3">
@@ -106,7 +106,7 @@
                     </div>
                     <button type="button" class="btn btn-end btn-link position-absolute bottom-0 end-0 mb-2 me-2"
                         (click)="viewReports()">
-                        {{ 'report.view_all' | translate }}
+                        {{ 'report.view_all' | translate | sentenceCase }}
                     </button>
                 </div>
             </div>
@@ -146,7 +146,7 @@
                     </div>
                     <button type="button" class="btn btn-end btn-link position-absolute bottom-0 end-0 mb-2 me-2"
                         (click)="viewReports()">
-                        {{ 'report.view_all' | translate }}
+                        {{ 'report.view_all' | translate | sentenceCase }}
                     </button>
                 </div>
             </div>
