--- a/src/app/features/lms/grp/components/policy/components/policy-summary/policy-summary.component.css
+++ b/src/app/features/lms/grp/components/policy/components/policy-summary/policy-summary.component.css
@@ -136,3 +136,21 @@
 td {
   padding-left: 20px;
 }
+
+:host ::ng-deep {
+  .p-datatable .p-datatable-thead>tr>th {
+    color: #000000;
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    opacity: 70%;
+    white-space: nowrap;
+  }
+
+  .p-datatable-thead {
+    border-radius: 4px 0px 0px 0px;
+    background: #BAD0E4;
+  }
+}
