--- a/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.html
+++ b/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.html
@@ -70,16 +70,18 @@
                                 </div>
                                 <div class="mt-3" *ngIf="selectedRateType === 'C' ">
                                     <div>
-                                        <label for="rateDivFactor">Rate</label>
+                                        <label for="rate">Rate division factor</label>
                                     </div>
-                                    <div>
-                                        <input 
-                                            type="number"
-                                            pInputText
-                                            class="form-control"
-                                            id="sumAssured" 
-                                            [style]="{ width: '100%' }"
-                                            formControlName="rate">
+                                    <div class="form-group">
+                                        <div>
+                                            <input 
+                                                type="number"
+                                                pInputText
+                                                class="form-control"
+                                                id="sumAssured" 
+                                                [style]="{ width: '100%' }"
+                                                formControlName="rateDivFactor">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -109,18 +111,16 @@
                                 </div>
                                 <div class="mt-3" *ngIf="selectedRateType === 'C' ">
                                     <div>
-                                        <label for="rate">Rate division factor</label>
+                                        <label for="rateDivFactor">Rate</label>
                                     </div>
-                                    <div class="form-group">
-                                        <div>
-                                            <input 
-                                                type="number"
-                                                pInputText
-                                                class="form-control"
-                                                id="sumAssured" 
-                                                [style]="{ width: '100%' }"
-                                                formControlName="rateDivFactor">
-                                        </div>
+                                    <div>
+                                        <input 
+                                            type="number"
+                                            pInputText
+                                            class="form-control"
+                                            id="sumAssured" 
+                                            [style]="{ width: '100%' }"
+                                            formControlName="rate">
                                     </div>
                                 </div>
                             </div>
@@ -174,7 +174,7 @@
                                     </div>
                                     
                                 </div>
-                                <div class="mt-3">
+                                <!-- <div class="mt-3">
                                     <div>
                                         <label for="aggregateRateDivFactor">% of Main/yr SA</label>
                                     </div>
@@ -187,6 +187,39 @@
                                                 id="aggregatePercentageMainYr" 
                                                 [style]="{ width: '100%' }"
                                                 formControlName="aggregatePercentageMainYr">
+                                        </div>
+                                    </div>
+                                </div> -->
+                                <div class="mt-3">
+                                    <div>
+                                        <label for="category">Category</label>
+                                    </div>
+                                    <div class="form-group">
+                                        <div>
+                                            <input 
+                                                type="text"
+                                                pInputText
+                                                class="form-control"
+                                                id="category" 
+                                                [style]="{ width: '100%' }"
+                                                formControlName="category">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="mt-3">
+                                    <div>
+                                        <label for="aggregatePremiumMask">Multiple of earnings</label>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="form-group">
+                                            <input 
+                                            type="number"
+                                            pInputText
+                                            class="form-control"
+                                            id="rate" 
+                                            [style]="{ width: '100%' }" 
+                                            formControlName="rate" 
+                                           >
                                         </div>
                                     </div>
                                 </div>
@@ -207,22 +240,6 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!-- <div class="mt-3">
-                                    <div>
-                                        <label for="sumAssured">Category</label>
-                                    </div>
-                                    <div class="form-group">
-                                        <div>
-                                            <input 
-                                                type="text"
-                                                pInputText
-                                                class="form-control"
-                                                id="category" 
-                                                [style]="{ width: '100%' }"
-                                                formControlName="category">
-                                        </div>
-                                    </div>
-                                </div> -->
                             </div>
                             <div class="col-md-4">
                                
@@ -235,14 +252,14 @@
                                     </select>
                                 </div>
                                 <div class="mt-3">
-                                    <!-- <div class="col-lg-12 col-md-12 col-sm-12">
-                                        <label for="aggregatePercentageMainYr">Dependant type</label>
+                                    <div class="col-lg-12 col-md-12 col-sm-12">
+                                        <label for="dependantType">Dependant type</label>
                                         <select class="form-select" [id]="'dependantType'" formControlName="dependantType">
-                                            <ng-container *ngFor="let item of currency">
-                                                <option [value]="item['label']">{{ item['label'] | titlecase }}</option>
+                                            <ng-container *ngFor="let rate of SelectRateType">
+                                                <option [value]="rate['name']">{{ rate['value'] | titlecase }}</option>
                                             </ng-container>
                                         </select>
-                                    </div> -->
+                                    </div>
                                     
                                 </div>
                                 <div class="mt-3">
@@ -258,20 +275,21 @@
                                         [style]="{ width: '100%' }" 
                                         formControlName="averageEarningPerMember">
                                     </div>
-                                </div>
-                                <div class="mt-3">
+                                </div> 
+                                <div class="mt-3" *ngIf="selectedRateType === 'C' ">
                                     <div>
-                                        <label for="averageAnb">No of members</label>
+                                        <label for="rate">Rate division factor</label>
                                     </div>
                                     <div class="form-group">
-                                        <div>
+                                        <div class="form-group">
                                             <input 
-                                                type="number"
-                                                pInputText
-                                                class="form-control"
-                                                id="noOfMembers" 
-                                                [style]="{ width: '100%' }"
-                                                formControlName="noOfMembers">
+                                            type="number"
+                                            pInputText
+                                            class="form-control"
+                                            id="rateDivFactor" 
+                                            [style]="{ width: '100%' }" 
+                                            formControlName="rateDivFactor" 
+                                           >
                                         </div>
                                     </div>
                                 </div>
@@ -312,21 +330,19 @@
                                         </div>
                                     </div>
                                 </div>
-                                
-                                <div class="mt-3" *ngIf="selectedRateType === 'C' ">
+                                <div class="mt-3">
                                     <div>
-                                        <label for="rate">Rate division factor</label>
+                                        <label for="averageAnb">No of members</label>
                                     </div>
                                     <div class="form-group">
-                                        <div class="form-group">
+                                        <div>
                                             <input 
-                                            type="number"
-                                            pInputText
-                                            class="form-control"
-                                            id="rateDivFactor" 
-                                            [style]="{ width: '100%' }" 
-                                            formControlName="rateDivFactor" 
-                                           >
+                                                type="number"
+                                                pInputText
+                                                class="form-control"
+                                                id="noOfMembers" 
+                                                [style]="{ width: '100%' }"
+                                                formControlName="noOfMembers">
                                         </div>
                                     </div>
                                 </div>
@@ -462,7 +478,7 @@
   
 <!-- aggregate -->
 
-
+<ng-container *ngIf="quatationCalType === 'D' "> 
         <h5 class="mt-5 mb-1">Category details</h5>
         <div style="max-width: 40rem;">
           <div class="add-client-button-container">
@@ -593,6 +609,7 @@
 </p-table>
 
         </div>
+    </ng-container>
 
         <ng-container *ngIf="quatationCalType === 'D' ">    
         <div>
