--- a/src/app/features/lms/grp/components/quotation/components/summary/summary.component.html
+++ b/src/app/features/lms/grp/components/quotation/components/summary/summary.component.html
@@ -165,6 +165,7 @@
                 </div>
             </div>
             </div>
+            <ng-container *ngIf="quatationCalType === 'D' ">
             <div class="sub-summary col-md-4 col-sm-12 col-xs-12">
                 <h5 class="summary-label">Members summary</h5>
                 <div class="summary" style="width: 100%; height: 100%; position: relative;">
@@ -203,6 +204,7 @@
             </div>
 
             </div>
+        </ng-container>
         </div>
         <!-- beginning of modals for group quote summary -->
         <!-- modal for members summary -->
